; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/unused/dos/extr_dos.c_trash_machine.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/unused/dos/extr_dos.c_trash_machine.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@option = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@screen = common dso_local global i32 0, align 4
@gen_bmp = common dso_local global i32 0, align 4
@GFX_TEXT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @trash_machine() #0 {
  %1 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @option, i32 0, i32 0), align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = call i32 (...) @msdos_shutdown_sound()
  br label %5

5:                                                ; preds = %3, %0
  %6 = load i32, i32* @screen, align 4
  %7 = call i32 @clear(i32 %6)
  %8 = load i32, i32* @gen_bmp, align 4
  %9 = call i32 @destroy_bitmap(i32 %8)
  %10 = load i32, i32* @GFX_TEXT, align 4
  %11 = call i32 @set_gfx_mode(i32 %10, i32 0, i32 0, i32 0, i32 0)
  ret void
}

declare dso_local i32 @msdos_shutdown_sound(...) #1

declare dso_local i32 @clear(i32) #1

declare dso_local i32 @destroy_bitmap(i32) #1

declare dso_local i32 @set_gfx_mode(i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
